HBP-196. Try kubernetes client.

--- a/tvb_build/docker/Dockerfile-run
+++ b/tvb_build/docker/Dockerfile-run
@@ -20,7 +20,7 @@ RUN conda create -y --name tvb-run python=3.10 nomkl numba scipy numpy cython ps
 RUN conda install -y --name tvb-run -c conda-forge jupyterlab
 RUN /opt/conda/envs/tvb-run/bin/pip install --upgrade pip
 RUN /opt/conda/envs/tvb-run/bin/pip install lockfile scikit-build
-RUN /opt/conda/envs/tvb-run/bin/pip install syncrypto
+RUN /opt/conda/envs/tvb-run/bin/pip install syncrypto kubernetes
 
 # Jupyther notebook configurations: set password
 # tvb42
